# qng

./: LICENSE  MANIFEST.in  Pipfile  README.fr.rst  README.md  README.rst  setup.cfg  setup.py
qng/: __init__.py  cli.py  cli_qng.py  cli_qng_uda.py  common.py  generator.py
qng/data/: names.json  surnames.json  uda-hosts-m.json
qngng/: __init__.py  cli.py  cli_qngng.py  cli_qngng_uda.py  common.py
qngng/data/: uda-actors.json  uda-actresses.json  uda-hosts-f.json  uda-singers-f.json  uda-singers-m.json
scripts/: canonical_names.json  scrape_names.py  scrape_surnames.py
