[metadata]
name = qng
version = attr: qng.__version__
description = attr: qng.__description__
long_description = file: README.md
url = https://github.com/abusque/qng
author = Antoine Busque
author_email = antoinebusque@gmail.com
license = MIT
keywords = name, generator, quebec
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    qng = qng.cli:main
