[metadata]
name = qngng
version = attr: qngng.__version__
description = The Queb name generator: next generation
long_description = file: README.rst
url = https://github.com/eepp/qngng
author = Philippe Proulx, Antoine Busque
author_email = eeppeliteloop@gmail.com
license = MIT
keywords = name, generator, quebec, queb, uda
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    qngng = qngng.cli_qngng:main
    qngng-uda = qngng.cli_qngng_uda:main
